--- a/nvchecker.toml
+++ b/nvchecker.toml
@@ -2,6 +2,11 @@
 oldver = "old_ver.json"
 newver = "new_ver.json"
 
+[BASE]
+source = "container"
+container = "library/ruby"
+include_regex = "\\d+\\.\\d+\\.?\\d?-alpine\\d\\.\\d+"
+
 [TRAVIS]
 source = "gems"
 gems = "travis"
